--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button id="pay-btn" class="secondary-btn card-details-btn">Submit</button>
             </form>
         </div>
-	<script src="index.js" type="module"></script>
+	<script src="/index.js" type="module"></script>
     </body>
 </html>
 
